--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
+    "start": "node server.js"
+
   },
   "engines": {
     "node": ">=22.1.0",
