--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "engines": {
-    "node": ">=22.1.0",
+    "node": ">=22.1.0"
   },
   "keywords": [],
   "author": "sendaifun",
