--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "ts-node src/utils/keypair.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "build": "[my-framework] build --output public"
   },
   "engines": {
     "node": ">=22.1.0"
